--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,7 +12,8 @@
   width: 100%;
   margin: 0 auto;
   isolation: isolate;
-  --max-height: 800px;
+  --min-height: 800px;
+  --max-height: auto;
 }
 
 .intro .text {
@@ -53,6 +54,7 @@
   grid-row: 1;
   width: 100%;
   height: 100%;
+  min-height: var(--min-height);
   max-height: var(--max-height);
   z-index: 1;
   color: white;
@@ -67,6 +69,7 @@
 }
 .intro .gradient {
   height: 100%;
+  min-height: var(--min-height);
   max-height: var(--max-height);
   background-image: linear-gradient(
     45deg,
@@ -91,6 +94,7 @@
   grid-row: 1;
   width: 100%;
   height: auto;
+  min-height: var(--min-height);
   max-height: var(--max-height);
   display: flex;
   justify-content: center;
@@ -185,6 +189,10 @@
   }
 }
 @media (max-width: 800px) {
+  .intro {
+    --min-height: 200px;
+    --max-height: 400px;
+  }
   .intro {
     grid-template-rows: 400px 1fr;
     grid-template-columns: 1fr;
