Change layout, and text

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -5,6 +5,7 @@
 .footer .link {
   position: relative;
   display: inline-block;
+  padding-inline: 2px;
 }
 
 .footer .link::after {
@@ -14,9 +15,10 @@
   left: 0;
   height: 2px;
   width: 100%;
-  background-color: var(--blue-600);
+  background-color: var(--blue-300);
   transition: height 300ms;
   z-index: -1;
+  border-radius: 3px;
 }
 
 .footer .links {
@@ -24,11 +26,6 @@
   align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) and (hover: hover) and (pointer: fine) {
-  .footer .link:hover:after {
-    height: 100%;
-  }
-}
 .footer h3 {
   font-size: 2rem;
 }
