--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,13 +12,17 @@
   width: 100%;
   margin: 0 auto;
   isolation: isolate;
-  --min-height: 800px;
+  --min-height: 600px;
   --max-height: auto;
 }
 
 .intro .text {
   grid-column: 2 / 3;
   margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
 .intro .text .nav {
   display: flex;
@@ -36,17 +40,14 @@
   color: var(--blue-800);
 }
 
-.intro .text h1 {
-  font-size: 2.25rem;
-  line-height: 1.5;
-  font-weight: 700;
-  margin-block: 24px;
-}
-.intro .text p {
-  margin-bottom: 24px;
+.intro .text p.introText {
+  font-size: 2rem;
+  line-height: 1.25;
+  margin: auto 0;
 }
 .intro .text .blue {
-  color: var(--blue-800);
+  color: var(--blue-700);
+  line-height: inherit;
 }
 .intro .clipping {
   position: relative;
@@ -148,8 +149,8 @@
   display: inline-flex;
   align-items: center;
   padding: 6px 8px;
-  background-color: var(--blue-800);
-  transition: background 500ms;
+  background-color: var(--blue-600);
+  transition: background-color 500ms;
   color: white;
   gap: 4px;
   border-radius: 4px;
@@ -227,7 +228,7 @@
     color: var(--blue-600);
   }
   .intro .text .blue {
-    color: var(--blue-600);
+    color: var(--blue-300);
   }
   .intro .gradient {
     background-image: linear-gradient(
